<resources>
    <string name="app_name">Courtesy Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="car_name">Car name</string>
    <string name="car_code">Car code</string>
    <string name="qr_code">QRCode</string>
    <string name="save">Save</string>
    <string name="full_name">Full name</string>
    <string name="time_in">Time in</string>
    <string name="time_out">Time out</string>
    <string name="courtesy_car">Courtesy car</string>
    <string name="car_info">Car</string>
    <string name="license_type">License type</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="area">Area</string>
    <string name="agree">Agree</string>

    <string name="not_empty">Not empty</string>
    <string name="ok">Ok</string>
    <string name="status">Filter by status</string>
    <string name="from_date_to_date">Filter by date</string>
    <string name="filter">Filter</string>

    <string-array name="status_arr">
        <item>@string/all</item>
        <item>@string/borrowing</item>
        <item>@string/returned</item>
    </string-array>
    <string name="all">All</string>
    <string name="borrowing">Borrowing</string>
    <string name="returned">Returned</string>
    <string name="scanning_barcode"> --------- Scanning ---------</string>
    <string name="notification">Notification</string>
    <string name="close">Close</string>
    <string name="do_you_want_to_delete_it">Do you want to delete it ?</string>
    <string name="front_license">Front license</string>
    <string name="back_license">Back license</string>
    <string name="in_progress">in progress</string>
    <string name="customer_name_phone">Customer name, phone number</string>
    <string name="signature">Signature</string>
    <string name="address">Address</string>

    <string name="contracts">Contracts</string>
    <string name="list_car">List car</string>
    <string name="cloud_backup_restore">Backup/restore</string>
    <string name="exit">Exit</string>

    <string name="login">Login</string>
    <string name="choose_folder_sync">Choose drive folder</string>
    <string name="create_folder_sync">Create drive folder</string>
    <string name="restore_success">Restore success !</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>


    // drive
    <string name="download_progress">Download Progress:</string>
    <string name="menu_settings">Settings</string>
    <string name="button_subscribe">Listen for Changes</string>
    <string name="button_unsubscribe">Stop Listening for Changes</string>
    <string name="file_created">Created file: %1$s.</string>
    <string name="file_create_error">Error while trying to create the file.</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select file</string>
    <string name="custom_property_deleted">Custom properties successfully deleted.</string>
    <string name="update_failed">Unable to update file.</string>
    <string name="change_event">File change event: %1$s</string>
    <string name="tickle_finished">Finished tickling. Restart watch to resume.</string>
    <string name="content_updated">Successfully edited contents.</string>
    <string name="content_update_failed">Error while editing contents.</string>
    <string name="metadata_updated">Successfully updated metadata.</string>
    <string name="custom_property_updated">Custom property successfully inserted or updated.</string>
    <string name="file_not_pinnable">File is not pinnable.</string>
    <string name="file_already_pinned">File is already pinned.</string>
    <string name="query_failed">Problem while retrieving files.</string>
    <string name="read_failed">Error while retrieving file.</string>
    <string name="metadata_retrieved">Metadata successfully fetched. Title: %1$s</string>
    <string name="content_loaded">File contents successfully read.</string>
    <string name="file_deleted">File deleted.</string>
    <string name="delete_failed">Unable to delete file.</string>
    <string name="subscribed">Subscribed.</string>
    <string name="unsubscribed">Unsubscribed.</string>
    <string name="init_failed">Unable to initialize activity.</string>
    <string name="file_not_selected">No file selected, can not continue.</string>
    <string name="folder_not_selected">No folder selected, can not continue.</string>
    <string name="sign_out">Logout</string>
    <string name="edit_term">Edit terms &amp; Conditions</string>
    <string name="update_term">Update terms &amp; Conditions</string>
</resources>
