<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="@dimen/activity_horizontal_margin"
    android:minWidth="300dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            style="@style/editTextStyle"
            android:hint="@string/car_name"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/editTextStyle"
            android:hint="@string/car_code"
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/editTextStyle"
            android:hint="@string/qr_code"
            android:id="@+id/edt_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/buttonStyle"
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>