<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".presentation.features.add_contract.AddContractFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/courtesy_car"
                android:textSize="@dimen/text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@color/cardViewGrey">
                <Spinner
                    android:id="@+id/spn_car"
                    android:layout_alignParentLeft="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/view_time_in"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/time_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/edt_time_in"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_time_out"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/time_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/edt_time_out"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_full_name"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/license_type"
                android:textSize="@dimen/text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@color/cardViewGrey">
                <Spinner
                    android:id="@+id/spn_license_type"
                    android:layout_alignParentLeft="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"/>
            </RelativeLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="date"
                android:id="@+id/edt_date_of_birth"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="phone"
                android:id="@+id/edt_phone_number"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/contract_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_agree"
            android:text="@string/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_save"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
