<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <vn.mtouch.courtesycar.presentation.custom_view.CustomFontTextView
        style="@style/textViewStyle"
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/bother_background_text"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <Spinner
            android:id="@+id/spn_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <vn.mtouch.courtesycar.presentation.custom_view.CustomFontTextView
            style="@style/textViewStyle"
            android:text="@string/from_date_to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <CheckBox
            android:id="@+id/cb_filter_by_date"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/view_from_date_to_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <vn.mtouch.courtesycar.presentation.custom_view.CustomFontTextView
            android:id="@+id/tv_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/bother_background_text"
            android:padding="@dimen/activity_horizontal_margin" />

        <vn.mtouch.courtesycar.presentation.custom_view.CustomFontTextView
            android:id="@+id/tv_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/bother_background_text"
            android:padding="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <Button
        style="@style/buttonStyle"
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/ok" />


</LinearLayout>